--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<h1> Hello World! </h1> 
-<p>My name is n0madcat </p>
+<html>
+<head>
+<meta charset="utf-8">
+</head>
+<body>
+<h1>Testna stranica</h1>
+<div>Primjeri na webu:</div>
+<ul>
+    <li><a href="sample1.html">sample1.html</a></li>
+    <li><a href="sample2.html">sample2.html</a></li>
+    <li><a href="sample3.html">sample3.html</a></li>
+    <li><a href="sample4.html">sample4.html</a></li>
+	
+</ul>
+</body>
+</html>
